--- a/app/src/main/res/values/styles_text_view.xml
+++ b/app/src/main/res/values/styles_text_view.xml
@@ -57,6 +57,13 @@
         <item name="android:typeface">sans</item>
     </style>
 
+    <style name="TextViewLightHeader" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/colorLightHeader</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
     <style name="TextViewOnProfileSetting" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@android:color/black</item>
@@ -81,6 +88,13 @@
     <style name="TextViewRouteItem" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="TextViewRouteItemCost" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/colorLightHeader</item>
         <item name="android:textStyle">normal</item>
         <item name="android:typeface">sans</item>
     </style>
