--- a/app/src/main/res/drawable/ic_airplanemode_active_blue_24dp.xml
+++ b/app/src/main/res/drawable/ic_airplanemode_active_blue_24dp.xml
@@ -1,5 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp"
-        android:tint="#1E3CEB" android:viewportHeight="24.0"
+    android:tint="@color/colorAccent"
+    android:viewportHeight="24.0"
         android:viewportWidth="24.0" android:width="24dp">
     <path android:fillColor="#FF000000" android:pathData="M10.18,9"/>
     <path android:fillColor="#FF000000"
