--- a/app/src/main/res/layout/order_location_item.xml
+++ b/app/src/main/res/layout/order_location_item.xml
@@ -16,9 +16,9 @@
 
     <ImageView
         android:id="@+id/image_view_location_point"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_location_on_black_24dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:src="@drawable/ic_cloud_circle_black_24dp"
         app:layout_constraintEnd_toEndOf="@+id/image_view_connection_top"
         app:layout_constraintStart_toStartOf="@+id/image_view_connection_top"
         app:layout_constraintTop_toBottomOf="@+id/image_view_connection_top" />
@@ -39,18 +39,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toEndOf="@+id/image_view_location_point"
-        app:layout_constraintTop_toTopOf="@+id/image_view_connection_top"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="@tools:sample/cities" />
 
     <TextView
         android:id="@+id/text_view_arrival_date"
+        style="@style/TextViewTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintStart_toStartOf="@+id/text_view_location"
         app:layout_constraintTop_toBottomOf="@+id/text_view_location"
         tools:text="@tools:sample/date/hhmm" />
+
+    <View
+        android:id="@+id/divider_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="12dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_arrival_date" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
