--- a/app/src/main/res/layout/order_route_item.xml
+++ b/app/src/main/res/layout/order_route_item.xml
@@ -19,9 +19,8 @@
         android:id="@+id/image_view_route_type"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd="8dp"
         android:src="@drawable/ic_local_taxi_blue_24dp"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_route_name"
+        app:layout_constraintEnd_toEndOf="@+id/image_view_connection_top"
         app:layout_constraintStart_toStartOf="@+id/image_view_connection_top"
         app:layout_constraintTop_toBottomOf="@+id/image_view_connection_top" />
 
@@ -41,18 +40,17 @@
         style="@style/TextViewSmallHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintStart_toEndOf="@+id/image_view_connection_top"
         app:layout_constraintTop_toTopOf="@+id/image_view_connection_top"
         tools:text="@tools:sample/lorem" />
 
     <TextView
-            android:id="@+id/text_view_route_time_label"
-        style="@style/TextViewSmallHeader"
+        android:id="@+id/text_view_route_time_in_trip"
+        style="@style/TextViewTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@+id/image_view_route_type"
+        app:layout_constraintStart_toStartOf="@+id/text_view_route_name"
         app:layout_constraintTop_toBottomOf="@+id/text_view_route_name"
         tools:text="@tools:sample/date/hhmmss" />
 
@@ -61,9 +59,8 @@
         style="@style/TextViewMoneyOnSearchRoute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@+id/image_view_bottom_connection"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_route_time_label"
+        app:layout_constraintStart_toStartOf="@+id/text_view_route_time_in_trip"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_route_time_in_trip"
         tools:text="@tools:sample/us_zipcodes" />
 
     <TextView
@@ -75,5 +72,29 @@
         app:layout_constraintStart_toEndOf="@+id/text_view_route_cost"
         app:layout_constraintTop_toTopOf="@+id/text_view_route_cost"
         tools:text="@tools:sample/lorem" />
+
+    <!-- TODO Find out what this arrow does -->
+    <ImageView
+        android:id="@+id/image_view_arrow"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="16dp"
+        android:rotation="90"
+        android:src="@drawable/ic_expand_less_black_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/divider_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="16dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_is_route_paid" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
