--- a/app/src/main/res/values/styles_text_view.xml
+++ b/app/src/main/res/values/styles_text_view.xml
@@ -64,6 +64,13 @@
         <item name="android:typeface">sans</item>
     </style>
 
+    <style name="TextViewTime" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/colorLightHeader</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
     <style name="TextViewOnProfileSetting" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@android:color/black</item>
@@ -74,6 +81,20 @@
     <style name="TextViewAddNew" parent="Theme.MaterialComponents.Light">
         <item name="android:textSize">22sp</item>
         <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="TextViewIsPaid" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="TextViewIsNotPaid" parent="Theme.MaterialComponents.Light">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@android:color/holo_orange_dark</item>
         <item name="android:textStyle">normal</item>
         <item name="android:typeface">sans</item>
     </style>
