Fix register step two

--- a/app/src/main/res/layout/register_step_two_fragment.xml
+++ b/app/src/main/res/layout/register_step_two_fragment.xml
@@ -53,49 +53,59 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@tools:sample/us_zipcodes" />
 
-        <ImageView
-            android:id="@+id/image_view_code_first"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="@string/image_view_code_first"
-            android:src="@drawable/code_placeholder"
+        <LinearLayout
+            android:id="@+id/group_code_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_register_step_two_phone_number" />
+            app:layout_constraintTop_toBottomOf="@+id/text_view_register_step_two_phone_number">
 
-        <ImageView
-            android:id="@+id/image_view_code_second"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="@string/image_view_code_second"
-            android:src="@drawable/code_placeholder"
-            app:layout_constraintStart_toEndOf="@+id/image_view_code_first"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_register_step_two_phone_number" />
+            <ImageView
+                android:id="@+id/image_view_code_first"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:contentDescription="@string/image_view_code_first"
+                android:src="@drawable/code_placeholder"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_register_step_two_phone_number" />
 
-        <ImageView
-            android:id="@+id/image_view_code_third"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="@string/image_view_code_third"
-            android:src="@drawable/code_placeholder"
-            app:layout_constraintStart_toEndOf="@+id/image_view_code_second"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_register_step_two_phone_number" />
+            <ImageView
+                android:id="@+id/image_view_code_second"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:contentDescription="@string/image_view_code_second"
+                android:src="@drawable/code_placeholder"
+                app:layout_constraintStart_toEndOf="@+id/image_view_code_first"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_register_step_two_phone_number" />
 
-        <ImageView
-            android:id="@+id/image_view_code_fourth"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="@string/image_view_code_fourth"
-            android:src="@drawable/code_placeholder"
-            app:layout_constraintStart_toEndOf="@+id/image_view_code_third"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_register_step_two_phone_number" />
+            <ImageView
+                android:id="@+id/image_view_code_third"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:contentDescription="@string/image_view_code_third"
+                android:src="@drawable/code_placeholder"
+                app:layout_constraintStart_toEndOf="@+id/image_view_code_second"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_register_step_two_phone_number" />
+
+            <ImageView
+                android:id="@+id/image_view_code_fourth"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:contentDescription="@string/image_view_code_fourth"
+                android:src="@drawable/code_placeholder"
+                app:layout_constraintStart_toEndOf="@+id/image_view_code_third"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_register_step_two_phone_number" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/text_view_did_get_code_question"
@@ -106,7 +116,7 @@
             android:text="@string/did_get_code_question"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_view_code_first" />
+            app:layout_constraintTop_toBottomOf="@+id/group_code_input" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_resend_code"
